tests/parser-test-files/bad-files/define-class.20.error
error: Invalid variable
  --> test:5:3
   |
 5 |    (.m (:a -> :a)))
   |     ^^ variables cannot start with '.'
